Update COVID-19 data Analysis.ipynb

--- a/COVID-19 data Analysis.ipynb
+++ b/COVID-19 data Analysis.ipynb
@@ -26,7 +26,7 @@
     "    \n",
     "    \n",
     "\n",
-    "#### [Notebook by Mažvydas Brikas](https://www.linkedin.com/in/mazvydas-brikas/)      <br>[Turing College](https://www.turingcollege.com/)"
+    "#### [Notebook by Mažvydas Brikas](https://www.linkedin.com/in/mazvydas-brikas/)      "
    ]
   },
   {
